--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,14 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
+    apply from: "config.gradle"
+
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath rootProject.plugin_path.android_plugin
+        classpath rootProject.plugin_path.kotlin_plugin
     }
 }
 
